don't add -threaded in stage2/3 if we didn't build the threaded RTS

--- a/compiler/Makefile.ghcbin
+++ b/compiler/Makefile.ghcbin
@@ -37,8 +37,10 @@ endif
 
 endif
 
+ifneq "$(findstring thr, $(GhcRTSWays))" ""
 ifneq "$(GhcNotThreaded)" "YES"
 SRC_HC_OPTS += -threaded
+endif
 endif
 
 odir=stage$(stage)
