default_target should be "all", not "build"

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -22,7 +22,7 @@
 
 .PHONY: default_target
 
-default_target: build
+default_target: all
 
 # make doesn't give us an easy way to get the libraries built in
 # dependency order the first time, but not rebuild base (for example)
