Adding hpc package to ghc core libraries

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -61,6 +61,7 @@ SUBDIRS += $(wildcard mtl)
 SUBDIRS += $(wildcard fgl)
 SUBDIRS += $(wildcard X11)
 SUBDIRS += $(wildcard time)
+SUBDIRS += $(wildcard hpc)
 ifeq "$(Windows)" "NO"
 # HGL is not working on Win32, so omit it for now.  Better not to ship it
 # at all than to ship a broken version.
