--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -714,6 +714,7 @@ GHC_DOCBOOK_DIR_REL	= $(GHC_UTILS_DIR_REL)/docbook
 GHC_UNLIT_DIR_REL    	= $(GHC_UTILS_DIR_REL)/unlit
 GHC_HP2PS_DIR_REL	= $(GHC_UTILS_DIR_REL)/hp2ps
 GHC_HSTAGS_DIR_REL	= $(GHC_UTILS_DIR_REL)/hasktags
+GHC_GHCTAGS_DIR_REL	= $(GHC_UTILS_DIR_REL)/ghctags
 GHC_HSC2HS_DIR_REL	= $(GHC_UTILS_DIR_REL)/hsc2hs
 GHC_TOUCHY_DIR_REL	= $(GHC_UTILS_DIR_REL)/touchy
 GHC_PKG_DIR_REL		= $(GHC_UTILS_DIR_REL)/ghc-pkg
@@ -741,6 +742,7 @@ GHC_DOCBOOK_DIR		= $(FPTOOLS_TOP)/$(GHC_DOCBOOK_DIR_REL)
 GHC_UNLIT_DIR    	= $(FPTOOLS_TOP)/$(GHC_UNLIT_DIR_REL)
 GHC_HP2PS_DIR		= $(FPTOOLS_TOP)/$(GHC_HP2PS_DIR_REL)
 GHC_HSTAGS_DIR		= $(FPTOOLS_TOP)/$(GHC_HSTAGS_DIR_REL)
+GHC_GHCTAGS_DIR		= $(FPTOOLS_TOP)/$(GHC_GHCTAGS_DIR_REL)
 GHC_HSC2HS_DIR		= $(FPTOOLS_TOP)/$(GHC_HSC2HS_DIR_REL)
 GHC_TOUCHY_DIR		= $(FPTOOLS_TOP)/$(GHC_TOUCHY_DIR_REL)
 GHC_PKG_DIR		= $(FPTOOLS_TOP)/$(GHC_PKG_DIR_REL)
@@ -768,6 +770,7 @@ GHC_DOCBOOK_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_DOCBOOK_DIR_REL)
 GHC_UNLIT_DIR    	= $(FPTOOLS_TOP_ABS)/$(GHC_UNLIT_DIR_REL)
 GHC_HP2PS_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_HP2PS_DIR_REL)
 GHC_HSTAGS_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_HSTAGS_DIR_REL)
+GHC_GHCTAGS_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_GHCTAGS_DIR_REL)
 GHC_HSC2HS_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_HSC2HS_DIR_REL)
 GHC_TOUCHY_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_TOUCHY_DIR_REL)
 GHC_PKG_DIR_ABS		= $(FPTOOLS_TOP_ABS)/$(GHC_PKG_DIR_REL)
@@ -787,6 +790,7 @@ GHC_SPLIT_DIR_ABS	= $(FPTOOLS_TOP_ABS)/$(GHC_SPLIT_DIR_REL)
 GHC_UNLIT_PGM		= unlit$(exeext)
 GHC_HP2PS_PGM		= hp2ps
 GHC_HSTAGS_PGM		= hasktags
+GHC_GHCTAGS_PGM		= ghctags
 GHC_HSC2HS_INPLACE_PGM	= hsc2hs-inplace
 GHC_TOUCHY_PGM		= touchy$(exeext)
 GHC_MANGLER_PGM		= ghc-asm
@@ -812,6 +816,7 @@ endif
 UNLIT			= $(GHC_UNLIT_DIR)/$(GHC_UNLIT_PGM)
 HP2PS			= $(GHC_HP2PS_DIR)/$(GHC_HP2PS_PGM)
 HSTAGS			= $(GHC_HSTAGS_DIR)/$(GHC_HSTAGS_PGM)
+GHCTAGS			= $(GHC_GHCTAGS_DIR)/$(GHC_GHCTAGS_PGM)
 HSC2HS_INPLACE		= $(GHC_HSC2HS_DIR)/$(GHC_HSC2HS_INPLACE_PGM)
 MANGLER			= $(GHC_MANGLER_DIR)/$(GHC_MANGLER_PGM)
 SPLIT			= $(GHC_SPLIT_DIR)/$(GHC_SPLIT_PGM)
