Tweak the configuration and installation slightly Make it so that the documentation ends up where Cabal expects it to be on Windows (prep-bin-dist-mingw used to move it).

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -191,10 +191,15 @@ configure: $(foreach SUBDIR,$(SUBDIRS), \
 # the executable with the shell script on non-Windows. This should
 # probably be tidied up so that we can always pass the same libsubdir.
 ifeq "$(Windows)" "YES"
-libsubdir = $$pkgid
+DATA_REL_DIR = .
+datadir      = $$prefix
+libsubdir    = $$pkgid
 else
-libsubdir = $$compiler/lib/$$pkgid
+DATA_REL_DIR = share/ghc
+datadir      = $$prefix/share/ghc
+libsubdir    = $$compiler/lib/$$pkgid
 endif
+DOC_ROOT     = $(prefix)/$(DATA_REL_DIR)/doc/html/
 
 # We rely on all the CONFIGURE_ARGS being quoted with '...', and there
 # being no 's inside the values.
@@ -209,13 +214,13 @@ stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).%: %/setup/Setup
 	( cd $* && setup/Setup configure \
 	           $(CONFIGURE_OPTS) \
 	           --prefix='$$topdir' \
-	           --datadir='$$prefix/share' \
+	           --datadir='$(datadir)' \
+	           --datasubdir='.' \
 	           --libsubdir='$(libsubdir)' \
 	           --with-compiler=../../compiler/stage1/ghc-inplace$ \
 	           --with-hc-pkg=../../utils/ghc-pkg/ghc-pkg-inplace$ \
 	           --with-hsc2hs=../../utils/hsc2hs/hsc2hs-inplace \
 	           --with-ld=$(LD) \
-	           --datasubdir=ghc \
 	           --haddock-args="--use-contents=../index.html \
 	                           --use-index=../doc-index.html" \
 	           $(FLAGGED_CONFIGURE_ARGS) \
@@ -282,17 +287,15 @@ endif
 
 .PHONY: install install-docs install.library.%
 
-ROOT=$(prefix)/share/ghc/doc/html/
-
 install: $(foreach SUBDIR,$(SUBDIRS),install.library.$(SUBDIR))
 ifeq "$(HADDOCK_DOCS)" "YES"
-	$(INSTALL_DIR)                                            $(ROOT)
-	$(INSTALL_DATA)   index.html doc-index.html               $(ROOT)
-	$(INSTALL_SCRIPT) gen_contents_index                      $(ROOT)
+	$(INSTALL_DIR)                              $(DOC_ROOT)
+	$(INSTALL_DATA)   index.html doc-index.html $(DOC_ROOT)
+	$(INSTALL_SCRIPT) gen_contents_index        $(DOC_ROOT)
 	# Hacks:
-	$(INSTALL_DATA)   $(prefix)/share/ghc/doc/html/base/*.css $(ROOT)
-	$(INSTALL_DATA)   $(prefix)/share/ghc/doc/html/base/*.js  $(ROOT)
-	$(INSTALL_DATA)   $(prefix)/share/ghc/doc/html/base/*.gif $(ROOT)
+	$(INSTALL_DATA)   $(DOC_ROOT)/base/*.css    $(DOC_ROOT)
+	$(INSTALL_DATA)   $(DOC_ROOT)/base/*.js     $(DOC_ROOT)
+	$(INSTALL_DATA)   $(DOC_ROOT)/base/*.gif    $(DOC_ROOT)
 endif
 
 # Cabal doesn't let us ask to install docs only, so do nothing here
